--- a/src/components/Artists.css
+++ b/src/components/Artists.css
@@ -2,27 +2,18 @@
   background-color: #2b2b2b;
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
-  padding-left: 30px;
-  padding-right: 30px;
-  /* padding: 0; */
+  color: #f2f2f2;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 .title-artist {
   font-size: 50px;
-  /* margin-bottom: 20px; */
+  margin: 0;
+  margin-bottom: 10px;
   border-bottom: 2px solid orange;
   width: 200px;
-  color: #f2f2f2;
-  margin: 20px 0;
-  padding: 0;
-
-  /* margin: 0; 
-  padding: 0; 
-  font-size: 50px;
-  margin-bottom: 50px;
-  border-bottom: 2px solid orange;
-  width: 200px;
-  color: #f2f2f2; */
+  padding-top: 72px;
 }
 
 .artist-img {
@@ -56,7 +47,6 @@
   text-align: center;
   font-family: "Poppins", sans-serif;
   background-color: #2b2b2b;
-  color: #f2f2f2;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
